--- a/quickstart-learnfast/function-calling/function_calling.ipynb
+++ b/quickstart-learnfast/function-calling/function_calling.ipynb
@@ -13,6 +13,7 @@
     "import pytz\n",
     "from sqldbconn import get_connx\n",
     "from datetime import datetime\n",
+    "from collections import OrderedDict \n",
     "# import Markdown to display the results\n",
     "from IPython.display import Markdown, display\n",
     "\n",
@@ -28,7 +29,7 @@
     "ENGINE = os.getenv(\"ENGINE\")\n",
     "bing_search_url = os.getenv(\"BING_SEARCH_API_BASE\")\n",
     "search_endpoint = os.getenv(\"AZURE_SEARCH_ENDPOINT\")\n",
-    "search_key = os.getenv(\"AZURE_SEARCH_KEY\"); # Add your Azure Cognitive Search admin key here\n",
+    "search_key = os.getenv(\"AZURE_SEARCH_KEY\")\n",
     "search_index_name = os.getenv(\"AZURE_SEARCH_INDEX_NAME\")\n",
     "search_api_version = os.getenv(\"AZURE_SEARCH_API_VERSION\")"
    ]
@@ -58,19 +59,12 @@
     "    return json.dumps(output)\n",
     "\n",
     "def pci_dss_v4(query)->str:\n",
-    "    import requests\n",
-    "    from collections import OrderedDict\n",
-    "    # from langchain.embeddings.openai import OpenAIEmbeddings\n",
-    "    \n",
-    "    # embedder = OpenAIEmbeddings(deployment=\"text-embedding-ada-002\") \n",
     "    headers = {'Content-Type': 'application/json','api-key': search_key}\n",
     "    params = {'api-version': search_api_version}\n",
     "    k = 5\n",
     "    reranker_threshold =1\n",
     "\n",
     "    agg_search_results = dict()\n",
-    "\n",
-    "    index = os.getenv(\"SEARCH_INDEX_NAME\")\n",
     "\n",
     "    search_payload = {\n",
     "        \"search\": query,\n",
@@ -87,7 +81,7 @@
     "    search_payload[\"select\"]= \"id, title, content, name, location\"\n",
     "    \n",
     "\n",
-    "    resp = requests.post(os.environ['AZURE_SEARCH_ENDPOINT'] + \"/indexes/\" + index + \"/docs/search\",\n",
+    "    resp = requests.post(search_endpoint + \"/indexes/\" + search_index_name + \"/docs/search\",\n",
     "                        data=json.dumps(search_payload), headers=headers, params=params)\n",
     "\n",
     "    search_results = resp.json()\n",
@@ -456,7 +450,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hyssh\\AppData\\Local\\Temp\\ipykernel_28152\\3311056068.py:95: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\hyssh\\AppData\\Local\\Temp\\ipykernel_13240\\2004228846.py:88: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql_query(sql_query, get_connx())\n"
      ]
     },
@@ -584,6 +578,17 @@
     "```\"\"\"\n",
     "#display result well formatted in markdown\n",
     "display(Markdown(str_conversation))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next step\n",
+    "\n",
+    "Bring the code to an app using Gradio\n",
+    "\n",
+    "![](../../images/FuntionCalling_Chat.png)"
    ]
   },
   {
