--- a/quickstart-learnfast/function-calling/function_calling.ipynb
+++ b/quickstart-learnfast/function-calling/function_calling.ipynb
@@ -433,7 +433,7 @@
     "# \"\"\"\n",
     "\n",
     "# user_message = \"\"\"\n",
-    "# Latest price of bitcoint?\n",
+    "# Latest price of bitcoin?\n",
     "# \"\"\"\n",
     "\n",
     "# user_message = \"\"\"\n",
