--- a/quickstart-learnfast/pf/pf.ipynb
+++ b/quickstart-learnfast/pf/pf.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
     "from dotenv import load_dotenv\n",
     "from pathlib import Path\n",
     "from promptflow.tracing import trace, start_trace\n",
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +57,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pf",
+   "display_name": "aifoundry",
    "language": "python",
    "name": "python3"
   },
@@ -72,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
